# tmux-voice-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: hosts.json.example
src/tmux_voice_bridge/: __init__.py  __main__.py  shim.py
systemd/: tmux-voice-bridge.service
