[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmux-voice-bridge"
version = "0.1.0"
description = "Voice-inject Home Assistant Assist transcripts into tmux panes (Claude Code / Codex / any TUI)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "David Ryer" }]
keywords = ["tmux", "home-assistant", "voice", "assist", "claude-code", "codex", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/davidj4tech/tmux-voice-bridge"
Issues = "https://github.com/davidj4tech/tmux-voice-bridge/issues"

[project.scripts]
tmux-voice-bridge = "tmux_voice_bridge.shim:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tmux_voice_bridge"]
